tests/invalid/unsupported_call_type/main.py
def run_case() -> None:
    x: int = (1 + 2)(3)

if __name__ == "__main__":
    run_case()
